[gd_scene load_steps=5 format=3 uid="uid://cuvr1tofh85yg"]

[ext_resource type="Texture2D" uid="uid://b3sjh10q5kp17" path="res://Assets/ritualcircle/ritual_circle_inner_circlel.png" id="1_hlyvn"]
[ext_resource type="Script" path="res://Levels/main/InteractSample.gd" id="2_kmcgh"]
[ext_resource type="Texture2D" uid="uid://bpkxrx2fbqdj1" path="res://Assets/white circle.png" id="3_k6bnf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dvfjs"]
radius = 48.0104

[node name="Rune" type="Node2D"]

[node name="InteractableRune" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("1_hlyvn")

[node name="InteractSample" type="LineEdit" parent="InteractableRune"]
offset_left = -87.0
offset_top = -81.0
offset_right = 80.0
offset_bottom = -50.0
text = "Spell Activated Rune"
placeholder_text = "issefor"
alignment = 1
expand_to_text_length = true
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
select_all_on_focus = true
caret_blink_interval = 10.0
script = ExtResource("2_kmcgh")
metadata/_edit_use_anchors_ = true

[node name="LifeTime" type="Timer" parent="InteractableRune/InteractSample"]
wait_time = 4.0
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="InteractableRune/InteractSample"]
visible = false
position = Vector2(85, 81)
color = Color(1, 0, 0, 1)
energy = 3.03
texture = ExtResource("3_k6bnf")
texture_scale = 0.5

[node name="EnemyHurtbox" type="Area2D" parent="InteractableRune/InteractSample/PointLight2D"]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableRune/InteractSample/PointLight2D/EnemyHurtbox"]
shape = SubResource("CircleShape2D_dvfjs")

[node name="RuneArea" type="Area2D" parent="InteractableRune/InteractSample"]
modulate = Color(0.454902, 0.141176, 0.235294, 1)
position = Vector2(85, 81)
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableRune/InteractSample/RuneArea"]
shape = SubResource("CircleShape2D_dvfjs")

[connection signal="text_submitted" from="InteractableRune/InteractSample" to="InteractableRune/InteractSample" method="_on_text_submitted"]
[connection signal="timeout" from="InteractableRune/InteractSample/LifeTime" to="InteractableRune/InteractSample" method="_on_life_time_timeout"]
[connection signal="area_entered" from="InteractableRune/InteractSample/RuneArea" to="InteractableRune/InteractSample" method="_on_rune_area_area_entered"]
[connection signal="area_exited" from="InteractableRune/InteractSample/RuneArea" to="InteractableRune/InteractSample" method="_on_rune_area_area_exited"]
